--- a/index.html
+++ b/index.html
@@ -1,13 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>straightstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
-    
 
+
+
+    <nav class="navbar navbar-expand-md bg-black navbar-dark">
+        <div class="container">
+          <a class="navbar-brand text-white" href="#">Chata u Pata</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+                <a class="nav-link active text-white" aria-current="page" href="#">kid</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="#">Tsid</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="#">žid</a>
+            </li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+
+        <div id="carouselExampleCaptions" class="carousel slide d-none d-md-grid">
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/11662.jpg" class="d-block w-100" alt="slider">
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="display-1 fw-semibold bg-primary d-inline p-2">K0čky a Ps1</h1>
+                  <p class="mt-3 fs-4">Slider s nejnovějšími filmovými novinkami!</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/36678.jpg" class="d-block w-100" alt="slider">
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="display-1 fw-semibold bg-primary d-inline p-2">K0čky a Ps1</h1>
+                  <p class="mt-3 fs-4">Slider s nejnovějšími filmovými novinkami!</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/14131.jpg" class="d-block w-100" alt="slider">
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="display-1 fw-semibold bg-primary d-inline p-2">K0čky a Ps1</h1>
+                  <p class="mt-3 fs-4">Slider s nejnovějšími filmovými novinkami!</p>
+                </div>
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
