--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-    <nav class="navbar navbar-expand-md bg-black navbar-dark">
+    <nav class="navbar navbar-expand-md bg-black navbar-dark py-3">
         <div class="container">
           <a class="navbar-brand text-white" href="#">Chata u Pata</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,6 +66,43 @@
             <span class="visually-hidden">Next</span>
             </button>
         </div>
+
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-3 g-5 py-5">
+                <div class="col">
+                <div class="card text-center">
+                    <img src="images/strom.png" class="card-img-top" alt="smrk">
+                    <div class="card-body border">
+                    <h5 class="card-title">Jedinečný klid</h5>
+                    <p class="card-text"></p>
+                    </div>
+                </div>
+                </div>
+                <div class="col">
+                <div class="card text-center">
+                    <img src="images/strom.png" class="card-img-top" alt="smrk">
+                    <div class="card-body">
+                    <h5 class="card-title">Pohodlné ubytování</h5>
+                    <p class="card-text"></p>
+                    </div>
+                </div>
+                </div>
+                <div class="col">
+                <div class="card text-center">
+                    <img src="images/strom.png" class="card-img-top" alt="smkr">
+                    <div class="card-body">
+                    <h5 class="card-title">Velký pozemek</h5>
+                    <p class="card-text"></p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
