--- a/index.html
+++ b/index.html
@@ -121,31 +121,31 @@
                 <div class="row row-cols-1 row-cols-md-3 g-3">
                     <div class="col-lg-4 col-md-6">
                       <div class="card">
-                        <img src="..." class="card-img-top" alt="obr1">
+                        <img src="images/11662.jpg" class="card-img-top" alt="obr1">
                         <div class="card-body">
-                          <h5 class="card-title fs-3">Ooo</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                          <a href="#" class="px-4 py-2 btn fs-5 btn-primary">Více o Filmu</a>
+                          <h5 class="card-title fs-3 text-center">Dolní Apartmán</h5>
+                          <p class="card-text">Dolní apartmán má 2 pokoje pro 3, 1 koupelnu, kuchyň a obývací pokoj.</p>
+                          <a href="#" class="px-4 py-2 btn fs-5 btn-primary">Více info</a>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                       <div class="card">
-                        <img src="..." class="card-img-top" alt="obr2">
+                        <img src="images/11662.jpg" class="card-img-top" alt="obr2">
                         <div class="card-body">
-                          <h5 class="card-title fs-3">Finn the Human</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                          <a href="#" class="px-4 py-2 btn fs-5 btn-primary">Více o Filmu</a>
+                          <h5 class="card-title fs-3 text-center">Celá Chata</h5>
+                          <p class="card-text">Chata celá jenom pro vás</p>
+                          <a href="#" class="px-4 py-2 btn fs-5 btn-primary">Více info</a>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                       <div class="card">
-                        <img src="..." class="card-img-top" alt="obr3">
+                        <img src="images/11662.jpg" class="card-img-top" alt="obr3">
                         <div class="card-body">
-                          <h5 class="card-title fs-3">Jake the Dog</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                          <a href="#" class="px-4 py-2 btn fs-5 btn-primary">Více o Filmu</a>
+                          <h5 class="card-title fs-3 text-center">Horní Apartmán</h5>
+                          <p class="card-text">Horní aparmán nabízí 3 pokoje po 3, 2 koupelny, společný obývák, kuchyňku a hernu s kulečníkem.</p>
+                          <a href="#" class="px-4 py-2 btn fs-5 btn-primary">Více info</a>
                         </div>
                       </div>
                     </div>
