--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="col">
                 <div class="card text-center">
                     <img src="images/strom.png" class="card-img-top" alt="smrk">
-                    <div class="card-body border">
+                    <div class="card-body">
                     <h5 class="card-title">Jedinečný klid</h5>
                     <p class="card-text"></p>
                     </div>
@@ -100,8 +100,12 @@
         </div>
 
         <div class="container">
-            <h1 class="py-5 fw-bolder fs-1 text-uppercase mb-5">Historie domu</h1>
-            <div class="historie d-flex justify-content-md-evenly grid gap-0 column-gap-4">
+          
+        </div>
+
+        <div class="container lh-lg">
+            <h1 class="py-5 fw-bolder fs-1 text-uppercase mb-1">Historie domu</h1>
+            <div class="historie d-flex justify-content-md-evenly grid gap-0 column-gap-4 mb-5">
                 <p class="lh-lg">Chata byla původně postavena v roce 1950 rodinou Novákových jako letní útočiště v srdci Beskyd. Během let se stala milovaným místem shledávání pro rozrůstající se rodinu. Ve 70. letech prošla rozsáhlou renovací, která zachovala její původní kouzlo, ale zároveň přidala moderní pohodlí.
 
                     V 90. letech, kdy rodinné setkání začala ustupovat a nové generace měly jiné priority, se chata otevřela veřejnosti a začala se pronajímat. Přestože se hosté měnili, atmosféra chaty, teplo krbu, vůně dřeva a výhled na horské štíty – zůstala stejná.
@@ -115,7 +119,22 @@
                 <img src="images/36678.jpg" alt="histor" width="600px">
             </div>
 
-            <h1 class="py-5 fw-bolder fs-1 text-uppercase my-5">Nabídky ubytování</h1>
+            <h1 class="py-5 fw-bolder fs-1 text-uppercase my-1">Lokalita a okolí</h1>
+              <div class="lokalita d-flex justify-content-start grid gap-0 column-gap-4 mb-5">
+                <img src="images/14131.jpg" alt="lokalitaimg" width="500px">
+                <div class="lokalita_p">
+                  <p class="lh-lg">
+                    Rádi vám pomůžeme se zorientovat v okolí ubytování
+                    a doporučíme vám skvělá místa, kam vyrazit.
+                    Dozvíte se o nejlepších restauracích v okolí, turistických trasách, historických památkách a přírodních krásách, které stojí
+                    za návštěvu.
+                  </p>
+                  <button type="button" class="btn btn-dark">Typy na výlety</button>
+                </div>
+              </div>
+
+
+            <h1 class="py-5 fw-bolder fs-1 text-uppercase my-2">Nabídky ubytování</h1>
 
             <div class="ubytovani">
                 <div class="row row-cols-1 row-cols-md-3 g-3">
