--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>straightstrap</title>
+    <title>Chata u Blata</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
 </head>
@@ -13,20 +13,23 @@
 
     <nav class="navbar navbar-expand-md bg-black navbar-dark py-3">
         <div class="container">
-          <a class="navbar-brand text-white" href="#">Chata u Pata</a>
+          <a class="navbar-brand text-white" href="index.html">Chata u Blata</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">kid</a>
+                <a class="nav-link active text-white" aria-current="page" href="index.html">Domů</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="#">Tsid</a>
+                <a class="nav-link active text-white" aria-current="page" href="#">O Chatě</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="#">žid</a>
+                <a class="nav-link text-white" href="foto.html">Fotogalerie</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="#">Kontakty</a>
             </li>
             </ul>
         </div>
@@ -34,26 +37,28 @@
     </nav>
 
         <div id="carouselExampleCaptions" class="carousel slide d-none d-md-grid">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
             <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="images/11662.jpg" class="d-block w-100" alt="slider">
                 <div class="carousel-caption d-none d-md-block">
-                  <h1 class="display-1 fw-semibold bg-primary d-inline p-2">K0čky a Ps1</h1>
-                  <p class="mt-3 fs-4">Slider s nejnovějšími filmovými novinkami!</p>
+                  <h4 class="fw-semibold d-inline p-2">Chata u Blata</h4>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="images/36678.jpg" class="d-block w-100" alt="slider">
                 <div class="carousel-caption d-none d-md-block">
-                  <h1 class="display-1 fw-semibold bg-primary d-inline p-2">K0čky a Ps1</h1>
-                  <p class="mt-3 fs-4">Slider s nejnovějšími filmovými novinkami!</p>
+                  <h4 class="fw-semibold d-inline p-2">Chata u Blata</h4>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="images/14131.jpg" class="d-block w-100" alt="slider">
                 <div class="carousel-caption d-none d-md-block">
-                  <h1 class="display-1 fw-semibold bg-primary d-inline p-2">K0čky a Ps1</h1>
-                  <p class="mt-3 fs-4">Slider s nejnovějšími filmovými novinkami!</p>
+                  <h4 class="fw-semibold d-inline p-2">Chata u Blata</h4>
                 </div>
             </div>
             </div>
