--- a/ochate.html
+++ b/ochate.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chata u Blata - Fotogalerie</title>
+    <title>Chata u Blata</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    
 
-    <nav class="navbar navbar-expand-md bg-black navbar-dark py-2">
+    <nav class="navbar navbar-expand-md bg-black navbar-light py-2">
         <div class="container">
           <a class="navbar-brand text-white" href="index.html">Chata u Blata</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +22,7 @@
                 <a class="nav-link active text-white" aria-current="page" href="index.html">Domů</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">O Chatě</a>
+                <a class="nav-link active text-white" aria-current="page" href="ochate.html">O Chatě</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white" href="foto.html">Fotogalerie</a>
@@ -34,16 +35,20 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div class="fotogal py-5">
-            <img src="images/36678.jpg" class="img-fluid py-3" alt="...">
-            <img src="images/11662.jpg" class="img-fluid py-3" alt="...">
-            <img src="images/14131.jpg" class="img-fluid py-3" alt="...">
-            <img src="images/11662.jpg" class="img-fluid py-3" alt="...">
-            <img src="images/36678.jpg" class="img-fluid py-3" alt="...">
-        </div>
-    </div>
+    <div class="container lh-lg py-5" style="max-width: 920px;">
+        <h1 class="py-5 fw-bolder fs-2 text-uppercase my-1">O Nás</h1>
+        <p>Jsme tým nadšených nadšenců do přírody a relaxace, kteří se rozhodli sdílet kouzlo útulné chaty, kde se spojuje pohodlí s krásou okolní přírody. Naše chata, situovaná v srdci malebné krajiny, se stala místem, kde se setkáváme s klidem a přinášíme ho i našim hostům.</p>
 
+        <h1 class="py-5 fw-bolder fs-2 text-uppercase my-1">Naše Chata</h1>
+        <p>
+            Náš domov na odpočinek je vybaven moderním vybavením a zároveň si zachovává autentičnost rustikální chaty. Snažíme se vytvořit prostředí, kde se hosté cítí jako doma, a přesto mají možnost odpočívat od každodenního shonu.
+        </p>
+
+        <h1 class="py-5 fw-bolder fs-2 text-uppercase my-1">Naše Vize</h1>
+        <p>
+            Snažíme se vytvořit místo, které není jen chatou, ale oázou klidu a pohody. Chceme, aby naši hosté odcházeli s novými energiemi, plni nezapomenutelných zážitků a s příslibem návratu.
+        </p>
+    </div>
 
     <div class="container-fluid bg-black bg-opacity-75 mt-5 ">
         <footer>
@@ -78,8 +83,6 @@
           <p class="fs-6 fw-bold" style="margin:0;">Vytvoři Šimon Kazda 2023&copy;</p>
         </footer>
       </div>
-
-
 
 
 
