--- a/foto.html
+++ b/foto.html
@@ -9,30 +9,30 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-md bg-black navbar-dark py-2">
-        <div class="container">
-          <a class="navbar-brand text-white" href="index.html">Chata u Blata</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="index.html">Domů</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">O Chatě</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="foto.html">Fotogalerie</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="kontakty.html">Kontakty</a>
-            </li>
-            </ul>
-        </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-md bg-black navbar-light py-2">
+    <div class="container">
+      <a class="navbar-brand text-white" href="index.html">Chata u Blata</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+            <a class="nav-link active text-white" aria-current="page" href="index.html">Domů</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active text-white" aria-current="page" href="ochate.html">O Chatě</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="foto.html">Fotogalerie</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="kontakty.html">Kontakty</a>
+        </li>
+        </ul>
+    </div>
+    </div>
+  </nav>
 
     <div class="container">
         <div class="fotogal py-5">
