--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
           <div class="container lh-lg">
             <h1 class="py-5 fw-bolder fs-1 text-uppercase mb-1">Historie domu</h1>
-            <div class="historie d-flex justify-content-md-evenly grid gap-0 column-gap-4 mb-5">
+            <div class="historie d-flex justify-content-md-evenly grid gap-0 column-gap-4 mb-5 flex-column flex-lg-row">
                 <p class="lh-lg">Chata byla původně postavena v roce 1950 rodinou Novákových jako letní útočiště v srdci Beskyd. Během let se stala milovaným místem shledávání pro rozrůstající se rodinu. Ve 70. letech prošla rozsáhlou renovací, která zachovala její původní kouzlo, ale zároveň přidala moderní pohodlí.
 
                     V 90. letech, kdy rodinné setkání začala ustupovat a nové generace měly jiné priority, se chata otevřela veřejnosti a začala se pronajímat. Přestože se hosté měnili, atmosféra chaty, teplo krbu, vůně dřeva a výhled na horské štíty – zůstala stejná.
@@ -121,12 +121,12 @@
                     
                     Je důležité, aby každý aspekt historie byl pravdivý a odrážel konkrétní příběh vaší chaty. Jestliže máte specifické podrobnosti nebo zajímavé příhody, které byste rádi zahrnuli, sdělte mi je, a já je mohu začlenit do vyprávění.
                 </p>
-                <img src="images/36678.jpg" alt="histor" class="img-fluid ">
+                <img src="images/36678.jpg" alt="histor" class="img-fluid">
             </div>
 
             <h1 class="py-5 fw-bolder fs-1 text-uppercase my-1">Lokalita a okolí</h1>
-              <div class="lokalita d-flex justify-content-start grid gap-0 column-gap-4 mb-5">
-                <img src="images/14131.jpg" alt="lokalitaimg" width="500 px">
+              <div class="lokalita d-lg-flex justify-content-start grid gap-0 column-gap-4 mb-5">
+                <img src="images/14131.jpg" alt="lokalitaimg" class="img-fluid" width="500 px">
                 <div class="lokalita_p">
                   <p class="lh-lg">
                     Rádi vám pomůžeme se zorientovat v okolí ubytování
@@ -302,10 +302,11 @@
                 </div>
               </div>
           </div>
+        </div>
 
-        <div class="container-fluid bg-black bg-opacity-75 mt-5 ">
+        <div class="bg-black bg-opacity-75 mt-5">
           <footer>
-            <div class="mapa d-flex justify-content-md-evenly py-5">
+            <div class="mapa d-lg-flex justify-content-lg-evenly py-5 d-md-block d-none">
               <div class="kontaktz text-white">
                 <h2>KONTAKTY</h2>
                 <p style="width: 140px;">
@@ -316,7 +317,6 @@
                   </ul>
                 </p>
               </div>
-
               <div class="majtel text-white">
                 <h2>MAJITEL</h2>
                 <p style="width: 140px;">
@@ -331,15 +331,11 @@
           </footer>
         </div>
 
-        <div class="container-fluid bg-black">
+        <div class="bg-black">
           <footer>
-            <p class="fs-6 fw-bold" style="margin:0;">Vytvoři Šimon Kazda 2023&copy;</p>
+            <p class="fs-6 fw-bold text-center" style="margin:0;">Vytvoři Šimon Kazda 2023&copy;</p>
           </footer>
         </div>
-
-
-
-
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
