--- a/kontakty.html
+++ b/kontakty.html
@@ -71,9 +71,9 @@
           </div>
     </div>
 
-    <div class="container-fluid bg-black bg-opacity-75 mt-5">
+    <div class="bg-black bg-opacity-75 mt-5">
       <footer>
-        <div class="mapa d-flex justify-content-md-evenly py-5">
+        <div class="mapa d-lg-flex justify-content-lg-evenly py-5 d-md-block d-none">
           <div class="kontaktz text-white">
             <h2>KONTAKTY</h2>
             <p style="width: 140px;">
@@ -84,7 +84,6 @@
               </ul>
             </p>
           </div>
-
           <div class="majtel text-white">
             <h2>MAJITEL</h2>
             <p style="width: 140px;">
@@ -99,9 +98,9 @@
       </footer>
     </div>
 
-    <div class="container-fluid bg-black">
+    <div class="bg-black">
       <footer>
-        <p class="fs-6 fw-bold" style="margin:0;">Vytvoři Šimon Kazda 2023&copy;</p>
+        <p class="fs-6 fw-bold text-center" style="margin:0;">Vytvoři Šimon Kazda 2023&copy;</p>
       </footer>
     </div>
 
