--- a/ochate.html
+++ b/ochate.html
@@ -50,39 +50,38 @@
         </p>
     </div>
 
-    <div class="container-fluid bg-black bg-opacity-75 mt-5 ">
-        <footer>
-          <div class="mapa d-flex justify-content-md-evenly py-5">
-            <div class="kontaktz text-white">
-              <h2>KONTAKTY</h2>
-              <p style="width: 140px;">
-                <ul>
-                  <li>Velhartice 146</li>
-                  <li>+420 724 057 215</li>
-                  <li>chataublata@partsjeg.cz</li>
-                </ul>
-              </p>
-            </div>
-
-            <div class="majtel text-white">
-              <h2>MAJITEL</h2>
-              <p style="width: 140px;">
-                <ul>
-                  <li>Šimon Kazda</li>
-                </ul>
-              </p>
-            </div>
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20521.01836855329!2d15.74270175486559!3d49.99022282648135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470dcb0ecce1d7cb%3A0xe108c3800bca70cd!2sBlato%2C%20530%2002%20Mikulovice-Pardubice%202!5e0!3m2!1scs!2scz!4v1700433272730!5m2!1scs!2scz" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="bg-black bg-opacity-75 mt-5">
+      <footer>
+        <div class="mapa d-lg-flex justify-content-lg-evenly py-5 d-md-block d-none">
+          <div class="kontaktz text-white">
+            <h2>KONTAKTY</h2>
+            <p style="width: 140px;">
+              <ul>
+                <li>Velhartice 146</li>
+                <li>+420 724 057 215</li>
+                <li>chataublata@partsjeg.cz</li>
+              </ul>
+            </p>
           </div>
-        </footer>
-      </div>
+          <div class="majtel text-white">
+            <h2>MAJITEL</h2>
+            <p style="width: 140px;">
+              <ul>
+                <li>Šimon Kazda</li>
+              </ul>
+            </p>
+          </div>
 
-      <div class="container-fluid bg-black">
-        <footer>
-          <p class="fs-6 fw-bold" style="margin:0;">Vytvoři Šimon Kazda 2023&copy;</p>
-        </footer>
-      </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20521.01836855329!2d15.74270175486559!3d49.99022282648135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470dcb0ecce1d7cb%3A0xe108c3800bca70cd!2sBlato%2C%20530%2002%20Mikulovice-Pardubice%202!5e0!3m2!1scs!2scz!4v1700433272730!5m2!1scs!2scz" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </footer>
+    </div>
+
+    <div class="bg-black">
+      <footer>
+        <p class="fs-6 fw-bold text-center" style="margin:0;">Vytvoři Šimon Kazda 2023&copy;</p>
+      </footer>
+    </div>
 
 
 
