--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     Dozvíte se o nejlepších restauracích v okolí, turistických trasách, historických památkách a přírodních krásách, které stojí
                     za návštěvu.
                   </p>
-                  <button type="button" class="btn bg-primary text-white">Typy na výlety</button>
+                  <a href="tipy.html" class="btn btn-primary disabled" role="button" aria-disabled="true">Tipy na výlety</a>
                 </div>
               </div>
 
